[QF-2770]  fix: remove top gap on translation and reciter drawers on mobile (#2826)
Fixes mobile drawer spacing issue where translation and reciter drawers showed an unwanted gap at the top

--- a/src/components/Navbar/Drawer/Drawer.module.scss
+++ b/src/components/Navbar/Drawer/Drawer.module.scss
@@ -130,6 +130,10 @@
   padding-block-start: var(--spacing-small);
   padding-inline-start: var(--spacing-small);
   padding-inline-end: var(--spacing-small);
+
+  .settingsDrawer & {
+    margin-block-start: 0;
+  }
 }
 
 .noBodySpacing {
@@ -174,10 +178,14 @@
   .settingsDrawer & {
     @include breakpoints.smallerThanTablet {
       position: sticky;
-      padding-block: var(--spacing-small-px);
       inset-block-start: 0;
       background-color: var(--color-background-elevated);
+    }
+  }
 
+  .translationView & {
+    @include breakpoints.smallerThanTablet {
+      padding-block: var(--spacing-small-px);
     }
   }
 }
